--- a/package.json
+++ b/package.json
@@ -4,28 +4,51 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx webpack --mode development --watch",
-    "dev": "npx webpack --mode development",
-    "build": "npx webpack --mode production",
-    "start": "npx webpack-dev-server --mode development --open"
+    "watch": "cross-env NODE_ENV=development npx webpack --mode development --watch",
+    "dev": "cross-env NODE_ENV=development npx webpack --mode development",
+    "build": "cross-env NODE_ENV=production npx webpack --mode production",
+    "start": "npx webpack-dev-server --mode development --open",
+    "stats": "npx webpack --json > stats.json && webpack-bundle-analyzer stats.json"
   },
+  "browserslist": ">0.25%, not dead",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.2",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
+    "eslint": "^7.3.1",
+    "eslint-loader": "^4.0.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.6",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "jquery": "^3.5.1",
-    "normalize.css": "^8.0.1"
+    "lodash": "^4.17.15",
+    "normalize.css": "^8.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
